.audit/pytest.txt

=================================== ERRORS ====================================
______________ ERROR collecting tests/pulse/test_market_pulse.py ______________
..\..\..\AppData\Local\Programs\Python\Python311\Lib\site-packages\_pytest\python.py:498: in importtestmodule
    mod = import_path(
..\..\..\AppData\Local\Programs\Python\Python311\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
..\..\..\AppData\Local\Programs\Python\Python311\Lib\importlib\__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
..\..\..\AppData\Local\Programs\Python\Python311\Lib\site-packages\_pytest\assertion\rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests\pulse\test_market_pulse.py:9: in <module>
    from synapse.pulse.market_pulse import MarketPulseRunner, validate_signal
E     File "C:\Users\edu_a\OneDrive\Documentos\trendify-fase1\synapse\pulse\market_pulse.py", line 39
E       from __future__ import annotations
E       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   SyntaxError: from __future__ imports must occur at the beginning of the file
============================== warnings summary ===============================
ops\tests\test_capital_shield.py:1
  C:\Users\edu_a\OneDrive\Documentos\trendify-fase1\ops\tests\test_capital_shield.py:1: DeprecationWarning: capital_shield v1 is deprecated, use capital_shield_v2
    from ops.capital_shield_v1_DEPRECATED import CapitalShield

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ===========================
ERROR tests/pulse/test_market_pulse.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
